@@ -1,6 +1,6 @@
 #
 #
-# $Id: makefile.cyg,v 1.13 2002/06/08 16:16:49 mikulik Exp $
+# $Id: makefile.cyg,v 1.14 2002/07/21 13:17:56 mikulik Exp $
 #
 # GNUPLOT Makefile for Cygwin on WinNT and Win95/98/2000
 #
@@ -258,8 +258,8 @@ wgnuplot.exe: $(OBJS) $(WINOBJS) win/wgnuplot.def wgplt_res.o texticon.ico grpic
 		$(OBJS) $(WINOBJS) \
 		wgplt_res.o $(LDLIBS) $(TERMLIBS)
 
-pgnuplot.exe: win/pgnuplot.c
-	gcc -O2 -s -mno-cygwin -o pgnuplot.exe win/pgnuplot.c -luser32
+pgnuplot.exe: win/pgnuplot.c version.o
+	gcc -O2 -s -mno-cygwin -o pgnuplot.exe win/pgnuplot.c version.o -I. -luser32
 
 
 # Rules:
