@@ -1,5 +1,5 @@
 #
-# $Id: makefile.mgw,v 1.21 2002/06/08 16:16:49 mikulik Exp $
+# $Id: makefile.mgw,v 1.22 2002/07/21 13:17:56 mikulik Exp $
 #
 # GNUPLOT Makefile for MinGW32 MinGW32 on WinNT and Win95/98/..
 #
@@ -267,8 +267,8 @@ LDLIBS = -lkernel32 -lgdi32 -lwinspool -lcomdlg32 -ladvapi32 -lshell32 -ladvapi3
 wgnuplot.exe: $(OBJS) $(WINOBJS) win/wgnuplot.def wgplt_res.o texticon.ico grpicon.ico
 	$(LD) $(LDFLAGS) $(LDFLAGS2) -mwindows -o $@ $(OBJS) $(WINOBJS) wgplt_res.o $(LDLIBS) $(TERMLIBS)
 
-pgnuplot.exe: win/pgnuplot.c
-	gcc -O2 -s -o pgnuplot.exe win/pgnuplot.c -luser32
+pgnuplot.exe: win/pgnuplot.c version.o
+	gcc -O2 -s -o pgnuplot.exe win/pgnuplot.c version.o -I. -luser32
 
 # rules
 
